[package]
name = "raft_custom_test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
bincode = "1.3.3"                                      # Raft uses bincode for serialization
log = "0.4.26"
simplelog = "0.12.2"                                   # for raft shit
rand = "0.8"                                           # Downgraded to ensure compatibility with the frost crate
socket2 = "0.5.8"                                      # need it for maintaining the persistent connection
serde_json = "1.0.139"
frost-ed25519 = "1.0.0"
